--- a/TT_uwsgi.ini
+++ b/TT_uwsgi.ini
@@ -8,6 +8,8 @@ module          = TT.wsgi
 # the virtualenv (full path)
 home            = /home/bailey/treftstechnologies/uwsgi-django
 
+env             = HTTPS=on
+
 # process-related settings
 # master
 master          = true
@@ -19,3 +21,5 @@ socket          = /tmp/TT.sock
 chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
+# log output
+logto = /home/bailey/treftstechnologies/logs/uwsgi.log
