--- a/TT_nginx.conf
+++ b/TT_nginx.conf
@@ -1,18 +1,43 @@
 # the upstream component nginx needs to connect to
 upstream django {
-    #server 127.0.0.1:8001;
     server unix:///tmp/TT.sock;
 }
 
 # configuration of the server
 server {
-    # the port your site will be served on
-    listen      80;
+    server_name treftstechnologies.com;
+    listen               *:80;
+    listen               *:443 ssl spdy;
+    listen               [::]:80 ipv6only=on;
+    listen               [::]:443 ssl spdy ipv6only=on;
 
-    # the domain name it will serve for 
-    # substitute your machine's IP address or FQDN
-    server_name treftstechnologies.com; 
+    ssl_certificate /etc/letsencrypt/live/treftstechnologies.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/treftstechnologies.com/privkey.pem; # managed by Certbot
 
+    return 301 https://www.treftstechnologies.com$request_uri;
+}
+
+server {
+    server_name www.treftstechnologies.com;
+    listen               *:80;
+    listen               [::]:80;
+
+    return 301 https://www.treftstechnologies.com$request_uri;
+}
+
+server {
+    server_name www.treftstechnologies.com;
+    ssl on;
+    listen               *:443 ssl spdy;
+    listen               [::]:443 ssl spdy;
+
+    ssl_certificate /etc/letsencrypt/live/treftstechnologies.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/treftstechnologies.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    access_log /opt/TT/logs/nginx-access.log;
+    error_log /opt/TT/logs/nginx-error.log;
     charset     utf-8;
 
     # max upload size
@@ -27,8 +52,11 @@ server {
         alias /tmp/TT/static; # your Django project's static files - amend as required
     }
  
-    # Finally, send all non-media requests to the Django server.
     location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;                    
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
         uwsgi_pass  django;
         include     /home/bailey/treftstechnologies/uwsgi_params;
     }
