--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,24 @@ blessings==1.7
 bpython==0.18
 certifi==2019.6.16
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 curtsies==0.3.0
 defusedxml==0.6.0
-Django==2.2.2
+Django==2.2.3
 django-allauth==0.39.1
 django-extensions==2.1.9
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
+django-rest-swagger==2.2.0
 djangorestframework==3.9.4
 greenlet==0.4.15
 idna==2.8
+itypes==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 oauthlib==3.0.2
+openapi-codec==1.3.2
 Pillow==6.0.0
 Pygments==2.4.2
 python3-openid==3.1.0
@@ -20,8 +27,12 @@ pytz==2019.1
 PyYAML==5.1.1
 requests==2.22.0
 requests-oauthlib==1.2.0
+simplejson==3.16.0
 six==1.12.0
 sqlparse==0.3.0
+style==1.1.0
 typing==3.7.4
+update==0.0.1
+uritemplate==3.0.0
 urllib3==1.25.3
 wcwidth==0.1.7
