--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+amqp==1.4.9
+anyjson==0.3.3
+beautifulsoup4==4.8.0
+billiard==3.3.0.23
 blessings==1.7
 bpython==0.18
+celery==3.1.26.post2
 certifi==2019.6.16
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 curtsies==0.3.0
 defusedxml==0.6.0
-Django==2.2.3
+Django==2.1.11
 django-allauth==0.39.1
+django-celery==3.3.0
 django-extensions==2.1.9
+django-google-analytics-app==4.3.9
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
@@ -17,6 +24,7 @@ greenlet==0.4.15
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
+kombu==3.0.37
 MarkupSafe==1.1.1
 oauthlib==3.0.2
 openapi-codec==1.3.2
@@ -29,7 +37,9 @@ requests==2.22.0
 requests-oauthlib==1.2.0
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.9.2
 sqlparse==0.3.0
+structlog==19.1.0
 style==1.1.0
 typing==3.7.4
 update==0.0.1
