--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx riot --ext html ./TT/static/riot ./TT/static/riot/all.js",
+    "build-watch": "npx riot -w --ext html ./TT/static/riot ./TT/static/riot/all.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gibsonbailey/treftstechnologies.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gibsonbailey/treftstechnologies/issues"
   },
@@ -21,6 +22,7 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "babel-preset-minify": "^0.4.3"
+    "babel-preset-minify": "^0.4.3",
+    "riot-cli": "^4.1.2"
   }
 }
